feat(db): Add first version of init script, that fetch a block data and print the base fee.

--- a/db/package.json
+++ b/db/package.json
@@ -2,5 +2,8 @@
   "name": "db",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "ethers": "^6.6.4"
+  }
 }
