--- a/db/package.json
+++ b/db/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "ethers": "^6.6.4"
   }
 }
