feat: :sparkles: add wagmi helpers for transaction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "conventionalCommits.scopes": [
         "db",
         "protocol"
-    ]
+    ],
+    "typescript.tsdk": "gastoken-client/node_modules/typescript/lib"
 }
