fix(protocol): :clown_face: Fix price scaling in PriceFeed.sol

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "conventionalCommits.scopes": [
         "db",
-        "protocol"
+        "protocol",
+        "paymaster"
     ],
     "typescript.tsdk": "gastoken-client/node_modules/typescript/lib"
 }
